; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_pop3.c_pop3_parse_url_path.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_pop3.c_pop3_parse_url_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.Curl_easy* }
%struct.Curl_easy = type { %struct.TYPE_6__, %struct.TYPE_4__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i8* }
%struct.TYPE_4__ = type { %struct.POP3* }
%struct.POP3 = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*)* @pop3_parse_url_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pop3_parse_url_path(%struct.connectdata* %0) #0 {
  %2 = alloca %struct.connectdata*, align 8
  %3 = alloca %struct.Curl_easy*, align 8
  %4 = alloca %struct.POP3*, align 8
  %5 = alloca i8*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %2, align 8
  %6 = load %struct.connectdata*, %struct.connectdata** %2, align 8
  %7 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %6, i32 0, i32 0
  %8 = load %struct.Curl_easy*, %struct.Curl_easy** %7, align 8
  store %struct.Curl_easy* %8, %struct.Curl_easy** %3, align 8
  %9 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %10 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.POP3*, %struct.POP3** %11, align 8
  store %struct.POP3* %12, %struct.POP3** %4, align 8
  %13 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %14 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 1
  store i8* %18, i8** %5, align 8
  %19 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = load %struct.POP3*, %struct.POP3** %4, align 8
  %22 = getelementptr inbounds %struct.POP3, %struct.POP3* %21, i32 0, i32 0
  %23 = load i32, i32* @TRUE, align 4
  %24 = call i32 @Curl_urldecode(%struct.Curl_easy* %19, i8* %20, i32 0, i32* %22, i32* null, i32 %23)
  ret i32 %24
}

declare dso_local i32 @Curl_urldecode(%struct.Curl_easy*, i8*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
